<resources>
    <string name="app_name">友实习</string>

    <string name="close_icon">×</string>
    <string name="login_title">欢迎来到友实习</string>
    <string name="login_account">请输入手机号</string>
    <string name="login_password">请输入密码</string>
    <string name="goto_register">去注册</string>
    <string name="immediately_login">立即登录 →</string>

    <string name="register_title">注册友实习账号</string>
    <string name="input_phone_number">请输入手机号码</string>
    <string name="input_password">请输入密码</string>
    <string name="register">注册 →</string>
    <string name="title_activity_main">MainActivity</string>

    <string name="loading_notification">请稍候</string>

    <string name="chance">机会</string>
    <string name="Message">消息</string>
    <string name="My">我的</string>
    <string name="position">职位</string>


    <string name="company_logo">公司标志</string>
    <string name="position_name">Android开发实习生</string>
    <string name="company_name">阿里巴巴</string>
    <string name="company_location">杭州</string>
    <string name="work_time">5天/周</string>
    <string name="salary">￥ 150–200/天</string>
    <string name="salary_red_font">&lt;font color=\'#ff0000\'&gt;*&lt;/font&gt;￥ 150–200</string>
    <string name="update_date">03–19 更新</string>

    <string name="my_resume">我的简历</string>
    <string name="my_collection">我的收藏</string>
    <string name="exit">退出</string>
    <string name="deliver_position">发布职位</string>

    <string name="complete_message">完善信息</string>

    <string name="student_login">学生登录</string>
    <string name="company_login">企业登录</string>
    <string name="student_register">学生注册</string>
    <string name="company_register">企业注册</string>
    <string name="title_activity_company__main">Company_MainActivity</string>
    <string name="title_home">Home</string>
    <string name="title_dashboard">Dashboard</string>
    <string name="title_notifications">Notifications</string>
    <string name="title_activity_main2">Main2Activity</string>

    <string name="complete">完成</string>
    <string name="not_fit">不合适</string>
    <string name="access">通过</string>
</resources>
