<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:padding="@dimen/TwelveDp">

    <ImageView
        android:id="@+id/img_company_logo"
        android:layout_width="64dp"
        android:layout_height="64dp"
        android:layout_alignParentStart="true"
        android:layout_centerVertical="true"
        android:layout_marginEnd="@dimen/EightDp"
        android:contentDescription="@string/company_logo"
        tools:src="@drawable/alibaba_logo"
        />

    <TextView
        android:id="@+id/tv_position_name"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/FourDp"
        android:layout_toEndOf="@id/img_company_logo"
        android:ellipsize="end"
        android:textSize="@dimen/EighteenSp"
        android:textStyle="bold"
        tools:text="@string/position_name"

        />

    <TextView
        android:id="@+id/tv_company_name"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@id/tv_position_name"
        android:layout_marginTop="@dimen/FourDp"
        android:layout_toEndOf="@id/img_company_logo"
        android:textSize="@dimen/FourteenSp"
        tools:text="@string/company_name" />

    <TextView
        android:id="@+id/tv_company_location"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@id/tv_company_name"
        android:layout_marginTop="@dimen/FourDp"
        android:layout_toEndOf="@id/img_company_logo"
        android:textSize="@dimen/FourteenSp"
        tools:text="@string/company_location" />

    <TextView
        android:id="@+id/tv_update_date"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentEnd="true"
        android:layout_alignTop="@id/tv_company_name"
        android:textSize="@dimen/FourteenSp"
        tools:text="@string/update_date" />

    <TextView
        android:id="@+id/tv_salary"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentEnd="true"
        android:layout_alignTop="@id/tv_company_location"
        android:ellipsize="end"
        android:textColor="@color/colorText_red"
        android:textSize="@dimen/FourteenSp"
        tools:text="@string/salary" />

    <TextView
        android:id="@+id/tv_work_time"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignTop="@id/tv_company_location"
        android:layout_marginEnd="@dimen/TwelveDp"
        android:layout_toStartOf="@id/tv_salary"
        android:textSize="@dimen/FourteenSp"
        tools:text="@string/work_time" />

</RelativeLayout>